<resources>
    <string name="app_name">TimeDodge</string>
    <string name="mainmenu_btn_play">Play</string>
    <string name="mainmenu_btn_settings">Settings</string>
    <string name="mainmenu_btn_quit">Quit</string>
    <string name="settings_text_sound">Sound</string>
    <string name="sharedpref_sound_key">timedodge_soundvalue</string>
    <string name="sharedpref_sensitivity_key">timedodge_sensitivityvalue</string>
    <string name="sharedpref_name">timedodge</string>
    <string name="settings_text_music">Music</string>
    <string name="settings_text_sensorsensitivity">Tilt sensitivity</string>
    <string name="gameover_text_gameover">Game Over</string>
    <string name="gameover_text_gameover_subtext">aaahh maaaan…</string>
    <string name="gameover_text_points">Points:</string>
    <string name="gameover_text_bonuses">Bonuses:</string>
    <string name="gameover_btn_text_menu">Menu</string>
    <string name="gameover_btn_text_replay">Replay</string>
</resources>
